# fdroid_downloader

./: PE.org  pyproject.toml  readme.org
src/fdroid_downloader/: __init__.py  cli.py  fdroid.py
tests/: test_fdroid.py
