[project]
name = "fdroid-downloader"
version = "0.1.0"
description = "Download latest APKs from F-Droid."
readme = { file = "readme.org", content-type = "text/plain" }
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
fdroid-downloader = "fdroid_downloader.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
